<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/plant_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPlantName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:autofillHints="none"
            android:background="#ddd"
            android:hint="@string/enter_plant_name"
            android:inputType="text"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/type"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPlantType"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:autofillHints="none"
            android:background="#ddd"
            android:hint="@string/enter_plant_type"
            android:inputType="text"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/watering_frequency"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etWateringFrequency"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:autofillHints="none"
            android:background="#ddd"
            android:hint="@string/enter_watering_frequency"
            android:inputType="number"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/planting_date"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvPlantDate"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="#ddd"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/pick_planting_date"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnAddPlant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_plant" />
    </LinearLayout>

</LinearLayout>