<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".presentation.plant_details.PlantDetailsFragment">

    <TextView
        android:id="@+id/tvPlantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_rose"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPlantType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_flower"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvPlantWater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_watering_2_days"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvPlantDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_planting_date_2023_01_01"
        android:textSize="18sp" />

</LinearLayout>
